Rename app name to `K12` across multiple files

--- a/Web/index.html
+++ b/Web/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter">
   <link href="/common.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Orion Expo Updates Server</title>
+  <title>K12 Expo Updates Server</title>
 </head>
 
 <body>
