--- a/Web/public/index.html
+++ b/Web/public/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <script src="%PUBLIC_URL%/env-config.js"></script>
-  <title>Orion Expo Updates Server</title>
+  <title>K12 Expo Updates Server</title>
 </head>
 
 <body>
